welcome.lessons.welcome.variables.RunHalf.scala.code
var nbBiscuit=0;
var nbCaseOrange=0;
while(2 * nbBiscuits != nbCaseOrange + 1)
{
  if(estSurBiscuit())
  {
    nbBiscuit=nbBiscuit+1
  }
  if(estSurOrange())
  {
    nbCaseOrange=nbCaseOrange+1
  }
  avance()
}
recule()